--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
-click==7.1.2
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+blinker==1.8.2
+click==8.1.7
+flake8==7.0.0
+flake8-html==0.4.3
+Flask==3.0.3
+iniconfig==2.0.0
+itsdangerous==2.2.0
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mccabe==0.7.0
+npm==0.1.1
+optional-django==0.1.0
+packaging==24.1
+pillow==10.3.0
+pluggy==1.5.0
+pycodestyle==2.11.1
+pyflakes==3.2.0
+Pygments==2.17.2
+pytest==8.3.3
+pytest-flask==1.3.0
+pytest-mock==3.14.0
+python-slugify==8.0.4
+text-unidecode==1.3
+Werkzeug==3.0.4
